# libvlcpp

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  EventManager.cpp  EventManager.hpp  Instance.hpp  Makefile.am  Media.cpp  Media.hpp  MediaDiscoverer.cpp  MediaDiscoverer.hpp  MediaLibrary.cpp  MediaLibrary.hpp  MediaList.cpp  MediaList.hpp  MediaListPlayer.cpp  MediaListPlayer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  README.md  common.hpp  configure.ac  libvlc_Audio.cpp  libvlc_Audio.hpp  libvlc_EventManager.cpp  libvlc_EventManager.hpp  libvlc_Instance.cpp  libvlc_Instance.hpp  libvlc_Internal.hpp  libvlc_Media.cpp  libvlc_Media.hpp  libvlc_MediaDiscoverer.cpp  libvlc_MediaDiscoverer.hpp  libvlc_MediaLibrary.cpp  libvlc_MediaLibrary.hpp  libvlc_MediaList.cpp  libvlc_MediaList.hpp  libvlc_MediaListPlayer.cpp  libvlc_MediaListPlayer.hpp  (+14 more)
cmake/: FindLIBVLC.cmake  cpp11.cmake  vlcppConfig.cmake.in  vlcppConfigVersion.cmake.in
cppcx/: DialogCX.cpp  DialogCX.hpp  EqualizerCX.cpp  EqualizerCX.hpp  EventManagerCX.cpp  EventManagerCX.hpp  InstanceCX.cpp  InstanceCX.hpp  MediaCX.cpp  MediaCX.hpp  MediaDiscovererCX.cpp  MediaDiscovererCX.hpp  MediaListCX.cpp  MediaListCX.hpp  MediaPlayerCX.cpp  MediaPlayerCX.hpp  PlatformHelpers.cpp  PlatformHelpers.hpp  StructuresCX.cpp  StructuresCX.hpp
examples/: CMakeLists.txt  meson.build
examples/helloworld/: CMakeLists.txt  main.cpp  meson.build
examples/imem/: CMakeLists.txt  imem.cpp  meson.build
examples/renderers/: discovery.cpp  meson.build
src/: EventManager.cpp  EventManager.hpp  Instance.cpp  Instance.hpp  Internal.hpp  Media.cpp  Media.hpp  MediaDiscoverer.cpp  MediaDiscoverer.hpp  MediaLibrary.cpp  MediaLibrary.hpp  MediaList.cpp  MediaList.hpp  MediaListPlayer.cpp  MediaListPlayer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  common.hpp  structures.cpp  structures.hpp  vlc.hpp
subprojects/: libvlc.wrap
subprojects/packagefiles/libvlc/: declare-libvlc-dependency.patch  libvlc-minimal.ini
test/: CMakeLists.txt  main.cpp  meson.build
test/MediaPlayer/: main.cpp  meson.build
test/Parser/: meson.build  parse.cpp  thumbnail.cpp
vlcpp/: Dialog.hpp  Equalizer.hpp  EventManager.hpp  Instance.hpp  Internal.hpp  Media.hpp  MediaDiscoverer.hpp  MediaLibrary.hpp  MediaList.hpp  MediaListPlayer.hpp  MediaPlayer.hpp  Parser.hpp  Picture.hpp  RendererDiscoverer.hpp  common.hpp  meson.build  structures.hpp  vlc.hpp
