# Copyright (C) 2014-2025 VideoLAN - VideoLabs

libvlcpp_headers = files(
    'Dialog.hpp',
    'Equalizer.hpp',
    'EventManager.hpp',
    'Instance.hpp',
    'Internal.hpp',
    'Media.hpp',
    'MediaDiscoverer.hpp',
    'MediaLibrary.hpp',
    'MediaList.hpp',
    'MediaListPlayer.hpp',
    'MediaPlayer.hpp',
    'Picture.hpp',
    'RendererDiscoverer.hpp',
    'common.hpp',
    'structures.hpp',
    'vlc.hpp',
)
